# hover_dict

./: .gitignore  Cargo.toml  build.rs  models.json  readme.md  test_cursor.rs  test_menu.rs  test_tray.rs
src/: capture.rs  main.rs  translator.rs
